--- a/scss/dark/_variables-map-alt-to-core.scss
+++ b/scss/dark/_variables-map-alt-to-core.scss
@@ -78,6 +78,7 @@ $headings-color:                              $headings-color-alt;
 $text-muted:                                  $text-muted-alt;
 $blockquote-footer-color:                     $blockquote-footer-color-alt;
 $hr-color:                                    $hr-color-alt;
+$hr-bg-color:                                 $hr-bg-color-alt;
 $hr-opacity:                                  $hr-opacity-alt;
 $mark-bg:                                     $mark-bg-alt;
 
@@ -422,4 +423,4 @@ $pre-color:                                   $pre-color-alt;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Thu Aug 12 2021 11:18:08 GMT+1000 (Australian Eastern Standard Time)
+// Generated: Wed Oct 06 2021 11:55:02 GMT+1100 (Australian Eastern Daylight Time)
