--- a/scss/dark/_variables-map-core-to-temp.scss
+++ b/scss/dark/_variables-map-core-to-temp.scss
@@ -78,6 +78,7 @@ $headings-color-temp-dnu:                              $headings-color;
 $text-muted-temp-dnu:                                  $text-muted;
 $blockquote-footer-color-temp-dnu:                     $blockquote-footer-color;
 $hr-color-temp-dnu:                                    $hr-color;
+$hr-bg-color-temp-dnu:                                 $hr-bg-color;
 $hr-opacity-temp-dnu:                                  $hr-opacity;
 $mark-bg-temp-dnu:                                     $mark-bg;
 
@@ -422,4 +423,4 @@ $pre-color-temp-dnu:                                   $pre-color;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Thu Aug 12 2021 11:18:08 GMT+1000 (Australian Eastern Standard Time)
+// Generated: Wed Oct 06 2021 11:55:02 GMT+1100 (Australian Eastern Daylight Time)
