--- a/scss/dark/_variables-map-temp-to-alt.scss
+++ b/scss/dark/_variables-map-temp-to-alt.scss
@@ -78,6 +78,7 @@ $headings-color-alt:                              $headings-color-temp-dnu;
 $text-muted-alt:                                  $text-muted-temp-dnu;
 $blockquote-footer-color-alt:                     $blockquote-footer-color-temp-dnu;
 $hr-color-alt:                                    $hr-color-temp-dnu;
+$hr-bg-color-alt:                                 $hr-bg-color-temp-dnu;
 $hr-opacity-alt:                                  $hr-opacity-temp-dnu;
 $mark-bg-alt:                                     $mark-bg-temp-dnu;
 
@@ -422,4 +423,4 @@ $pre-color-alt:                                   $pre-color-temp-dnu;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Thu Aug 12 2021 11:18:08 GMT+1000 (Australian Eastern Standard Time)
+// Generated: Wed Oct 06 2021 11:55:02 GMT+1100 (Australian Eastern Daylight Time)
