--- a/scss/dark/mixins/_table-variants.scss
+++ b/scss/dark/mixins/_table-variants.scss
@@ -4,8 +4,11 @@
     $hover-bg: mix($color, $background, percentage($table-hover-bg-factor-alt));
     $striped-bg: mix($color, $background, percentage($table-striped-bg-factor-alt));
     $active-bg: mix($color, $background, percentage($table-active-bg-factor-alt));
+    $border-color: mix($color, $background, percentage($table-border-factor-alt));
 
+    --#{$variable-prefix}table-color: #{$color};
     --#{$variable-prefix}table-bg: #{$background};
+    --#{$variable-prefix}table-border-color: #{$border-color};
     --#{$variable-prefix}table-striped-bg: #{$striped-bg};
     --#{$variable-prefix}table-striped-color: #{color-contrast($striped-bg)};
     --#{$variable-prefix}table-active-bg: #{$active-bg};
@@ -13,7 +16,7 @@
     --#{$variable-prefix}table-hover-bg: #{$hover-bg};
     --#{$variable-prefix}table-hover-color: #{color-contrast($hover-bg)};
 
-    color: $color;
-    border-color: mix($color, $background, percentage($table-border-factor-alt));
+    color: var(--#{$variable-prefix}table-color);  // color: $color;
+    border-color: var(--#{$variable-prefix}table-border-color);  // border-color: mix($color, $background, percentage($table-border-factor-alt));
   }
 }
