slight alteration of link-color to accomodate issue #49

--- a/scss/_variables-alt.scss
+++ b/scss/_variables-alt.scss
@@ -362,9 +362,9 @@ $utilities-bg-colors-alt: map-loop($utilities-bg-alt, rgba-css-var-alt, "$key", 
 // ______________________________________
 // Style anchor elements.
 
-$link-color-alt:                              shift-color($primary-alt, -15%) !default;
-$link-shade-percentage-alt:                   20% !default;  // TODO: should be -20%;
-$link-hover-color-alt:                        tint-color($link-color-alt, $link-shade-percentage-alt) !default;  // TODO: shift-color
+$link-shade-percentage-alt:                   20% !default;  // not used
+$link-color-alt:                              shift-color($primary-alt, -$link-shade-percentage-alt) !default;
+$link-hover-color-alt:                        shift-color($primary-alt, -$link-shade-percentage-alt * 0.5) !default;  // math.div(2)
 
 
 // Components
