--- a/scss/_variables-alt.scss
+++ b/scss/_variables-alt.scss
@@ -393,9 +393,10 @@ $text-muted-alt:                  $gray-400-alt !default;
 
 $blockquote-footer-color-alt:     $gray-600-alt !default;
 
-$hr-color-alt:                    $white-alt !default;
+$hr-color-alt:                    null !default;  // Deprecated in v5.2.0
 $hr-bg-color-alt:                 currentColor !default;
-$hr-opacity-alt:                  .1 !default;
+$hr-border-color-alt:             null !default;  // Allows for inherited colors
+$hr-opacity-alt:                  .25 !default;
 
 $mark-bg-alt:                     rgba($yellow-alt, .5) !default;
 
