--- a/scss/dark/_patch.scss
+++ b/scss/dark/_patch.scss
@@ -1,3 +1,5 @@
+$hr-border-width: 1;  // remove this for 5.2
+
 //
 // Patch some items missing in BS5
 // @see: https://getbootstrap.com/docs/5.1/utilities/api/
