--- a/scss/dark/_tables.scss
+++ b/scss/dark/_tables.scss
@@ -24,13 +24,11 @@
   //   background-color: var(--#{$variable-prefix}table-bg);
   //   box-shadow: inset 0 0 0 9999px var(--#{$variable-prefix}table-accent-bg);
   // }
-
-  // Highlight border color between thead, tbody and tfoot.
-  > :not(:first-child) {
-    border-top: (2 * $table-border-width) solid $table-group-separator-color-alt;
-  }
 }
 
+.table-group-divider {
+  border-top: calc(2 * $table-border-width) solid $table-group-separator-color-alt; // stylelint-disable-line function-disallowed-list
+}
 
 // Zebra-striping
 
