--- a/scss/dark/_patch.scss
+++ b/scss/dark/_patch.scss
@@ -1,4 +1,4 @@
-$hr-border-width: 1;  // remove this for 5.2
+$hr-border-width: 1 !default;  // remove this for 5.2
 
 //
 // Patch some items missing in BS5
