--- a/scss/_variables-alt.scss
+++ b/scss/_variables-alt.scss
@@ -371,7 +371,7 @@ $link-hover-color-alt:                        shift-color($primary-alt, -$link-s
 // ______________________________________
 // Define common padding and border radius sizes and more.
 
-$border-color-alt:                $gray-700-alt !default;
+$border-color-alt:                rgba($white, .15) !default;
 
 $box-shadow-alt:                  0 .5rem 1rem rgba($black-alt, .15) !default;
 $box-shadow-sm-alt:               0 .125rem .25rem rgba($black-alt, .075) !default;
